--- a/app/src/main/res/layout/third_card.xml
+++ b/app/src/main/res/layout/third_card.xml
@@ -11,7 +11,7 @@
         xmlns:card_view="http://schemas.android.com/apk/res-auto"
         android:id="@+id/notes_CV"
         android:layout_width="match_parent"
-        android:layout_height="200dp"
+        android:layout_height="match_parent"
         android:layout_gravity="center"
         android:layout_marginBottom="5dp"
         card_view:cardCornerRadius="@dimen/corner_dim"
@@ -19,7 +19,7 @@
         cardview:cardUseCompatPadding="true">
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
 
@@ -35,13 +35,14 @@
                 android:textStyle="bold"/>
 
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="horizontal">
 
                 <EditText
                     android:id="@+id/edit_notes"
-                    android:layout_width="318dp"
+                    android:layout_width="wrap_content"
+                    android:layout_weight="0.6"
                     android:layout_height="match_parent"
                     android:background="@drawable/pinkstrip_memo2"
                     android:text=" Write some notes"
@@ -51,8 +52,9 @@
                     android:textColor="#fff" />
 
                 <LinearLayout
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="match_parent"
+                    android:layout_weight="0"
                     android:orientation="vertical">
 
                     <Button
